Simplify CSS production build steps Fixes #12

--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -3,6 +3,8 @@
         <TargetFramework>net5.0</TargetFramework>
         <Nullable>Enable</Nullable>
         <RootNamespace>TailBlazor.Shared</RootNamespace>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <IntermediateOutputPath>obj</IntermediateOutputPath>
     </PropertyGroup>
     <ItemGroup>
         <SupportedPlatform Include="browser" />
@@ -16,4 +18,13 @@
     <ItemGroup>
         <None Update="Components/PersonCard.razor.css" CssScope="tb-person-card" />
     </ItemGroup>
+
+    <Target Name="tw-build" AfterTargets="Build" Condition="'$(Configuration)' != 'Release'" >
+        <Exec Command="npm run build-client" EnvironmentVariables="TAILWIND_MODE=build" />
+    </Target>
+
+    <Target Name="tw-publish" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'" >
+        <Exec Command="npm run publish-client" />
+    </Target>
+
 </Project>
