--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -13,5 +13,23 @@
         <ProjectReference Include="..\Shared\Shared.csproj" />
         <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
+    
+    <PropertyGroup>
+        <PreBuildEvent Condition="'$(Configuration)' == 'Release'">
+            cd $(MSBuildProjectDirectory)/
+            npm run publish-client
+        </PreBuildEvent>
+        <PreBuildEvent Condition="'$(Configuration)' == 'Debug'">
+            cd $(MSBuildProjectDirectory)/
+            npm run build-client
+        </PreBuildEvent>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <!-- exclude all Content items from being watched, -->
+        <!-- site.min.css in particular: this is a workaround -->
+        <!-- https://github.com/dotnet/aspnetcore/issues/27775 -->
+        <Content Update="@(Content)" Watch="false" />
+    </ItemGroup>
 
 </Project>
