try fixing cp fails even after cd

--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -20,12 +20,12 @@
         <PostBuildEvent Condition="'$(Configuration)' == 'Release'">
             cd $(MSBuildProjectDirectory)/
             npm run publish-client
-            cp ./Client/wwwroot/css/site.min.css ./Server/wwwroot/css/site.min.css 
+            cp $(MSBuildProjectDirectory)/Client/wwwroot/css/site.min.css $(MSBuildProjectDirectory)/Server/wwwroot/css/site.min.css 
         </PostBuildEvent>
         <PostBuildEvent Condition="'$(Configuration)' == 'Debug'">
             cd $(MSBuildProjectDirectory)/
             npm run build-client
-            cp ./Client/wwwroot/css/site.min.css ./Server/wwwroot/css/site.min.css 
+            cp $(MSBuildProjectDirectory)/Client/wwwroot/css/site.min.css $(MSBuildProjectDirectory)/Server/wwwroot/css/site.min.css 
         </PostBuildEvent>
     </PropertyGroup>
 
