--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -15,18 +15,15 @@
     <ItemGroup>
         <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
-    
-    <PropertyGroup>
-        <PostBuildEvent Condition="'$(Configuration)' == 'Release'">
-            cd $(MSBuildProjectDirectory)/
-            npm run publish-client
-            cp $(MSBuildProjectDirectory)/Client/wwwroot/css/site.min.css $(MSBuildProjectDirectory)/Server/wwwroot/css/site.min.css 
-        </PostBuildEvent>
-        <PostBuildEvent Condition="'$(Configuration)' == 'Debug'">
-            cd $(MSBuildProjectDirectory)/
-            npm run build-client
-            cp $(MSBuildProjectDirectory)/Client/wwwroot/css/site.min.css $(MSBuildProjectDirectory)/Server/wwwroot/css/site.min.css 
-        </PostBuildEvent>
-    </PropertyGroup>
+
+    <Target Name="tw-build" AfterTargets="Build" Condition="'$(Configuration)' == 'Debug'" >
+        <Exec Command="npm run build-client" />
+        <Copy SourceFiles="$(MSBuildProjectDirectory)/../Client/wwwroot/css/site.min.css" DestinationFolder="$(MSBuildProjectDirectory)/../Server/wwwroot/css/" />
+    </Target>
+
+    <Target Name="tw-publish" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'" >
+        <Exec Command="npm run publish-client" />
+        <Copy SourceFiles="$(MSBuildProjectDirectory)/../Client/wwwroot/css/site.min.css" DestinationFolder="$(MSBuildProjectDirectory)/../Server/wwwroot/css/" />
+    </Target>
 
 </Project>
