Improve CSS build steps (#15)
* Improve CSS build steps
Fixes #14

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -9,4 +9,11 @@
         <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <!-- exclude all Content items from being watched, -->
+        <!-- site.min.css in particular: this is a workaround -->
+        <!-- https://github.com/dotnet/aspnetcore/issues/27775 -->
+        <Content Update="@(Content)" Watch="false" />
+    </ItemGroup>
+
 </Project>
