Move to net6.0 preview

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,8 +36,7 @@
       "console": "integratedTerminal",
       "args": [
         "watch",
-        "run",
-        "--configuration vscode",
+        "run"
       ],
       "cwd": "${workspaceFolder}/Client",
       "presentation": {
