use line-clamp plugin to handle Person.Bio overflow - Fixes #7

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "blazor"
   ],
   "author": "mcnerdius",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@tailwindcss/line-clamp": "^0.2.1"
+  }
 }
