--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -10,7 +10,7 @@
         <SupportedPlatform Include="browser" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.5.*" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Core\Core.csproj" />
