--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
       "processId": "${command:azureFunctions.pickProcess}",
       "presentation": {
         "group": "API",
-        "close": true,
+        "close": true
       },
       "internalConsoleOptions": "neverOpen"
     },
@@ -37,8 +37,8 @@
       "program": "dotnet",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "preLaunchTask": "start tailwind jit/watch",
-      "postDebugTask": "stop tailwind jit/watch",
+      "preLaunchTask": "start tailwind jit/watch - client",
+      "postDebugTask": "stop tailwind jit/watch - client",
       "args": [
         "watch",
         "run"
@@ -49,13 +49,42 @@
       }
     },
     {
+      "name": "Client - Delayed Watch",
+      "type": "coreclr",
+      "request": "launch",
+      "program": "dotnet",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "preLaunchTask": "delay",
+      "args": [
+        "watch",
+        "run"
+      ],
+      "cwd": "${workspaceFolder}/Client",
+      "presentation": {
+        "close": true,
+        "hidden": true
+      }
+    },
+    {
       "name": "Client ONLY: Debug",
       "type": "blazorwasm",
       "request": "launch",
       "cwd": "${workspaceFolder}/Client",
-      "preLaunchTask": "Clean & Build All",
       "presentation": {
         "close": true
+      },
+      "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "name": "Client - Delayed Debug",
+      "type": "blazorwasm",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/Client",
+      "preLaunchTask": "delay",
+      "presentation": {
+        "close": true,
+        "hidden": true
       },
       "internalConsoleOptions": "neverOpen"
     },
@@ -75,8 +104,8 @@
         "group": "Server",
         "close": true,
       },
-      "preLaunchTask": "start tailwind jit/watch",
-      "postDebugTask": "stop tailwind jit/watch"
+      "preLaunchTask": "start tailwind jit/watch - server",
+      "postDebugTask": "stop tailwind jit/watch - server",
     },
     {
       // Use IntelliSense to find out which attributes exist for C# debugging
@@ -85,7 +114,6 @@
       "name": "Server: Debug",
       "type": "coreclr",
       "request": "launch",
-      "preLaunchTask": "Clean & Build All",
       // If you have changed target frameworks, make sure to update the program path.
       "program": "${workspaceFolder}/Server/bin/Debug/net6.0/Server.dll",
       "args": [],
@@ -101,7 +129,6 @@
       },
       "presentation": {
         "group": "Server",
-        "hidden": true,
         "close": true
       },
       "internalConsoleOptions": "neverOpen"
@@ -112,8 +139,10 @@
       "name": "Client+API: Watch",
       "configurations": [
         "API: Watch",
-        "Client ONLY: Watch"
+        "Client - Delayed Watch"
       ],
+      "preLaunchTask": "start tailwind jit/watch - client",
+      "postDebugTask": "stop tailwind jit/watch - client",
       "presentation": {
         "group": "Client",
         "close": true
@@ -124,8 +153,10 @@
       "name": "Client+API: Debug",
       "configurations": [
         "API: Debug",
-        "Client ONLY: Debug"
+        "Client - Delayed Debug"
       ],
+      "preLaunchTask": "start tailwind jit/watch - client",
+      "postDebugTask": "stop tailwind jit/watch - client",
       "presentation": {
         "group": "Client",
         "close": true,
