--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,66 +2,6 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "API: Clean & Build",
-      "type": "shell",
-      "command": "dotnet clean && dotnet build",
-      "presentation": {
-        "reveal": "silent",
-        "panel": "shared",
-        "clear": true
-      },
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/API"
-      },
-      "group": "build"
-    },
-    {
-      "label": "Client: Clean & Build",
-      "type": "shell",
-      "command": "dotnet clean && dotnet build",
-      "presentation": {
-        "reveal": "silent",
-        "panel": "shared",
-        "clear": true
-      },
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Client"
-      },
-      "group": "build"
-    },
-    {
-      "label": "Core: Clean & Build",
-      "type": "shell",
-      "command": "dotnet clean && dotnet build",
-      "presentation": {
-        "reveal": "silent",
-        "panel": "shared",
-        "clear": true
-      },
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Core"
-      },
-      "group": "build"
-    },
-    {
-      "label": "Server: Clean & Build",
-      "type": "shell",
-      "command": "dotnet clean && dotnet build",
-      "presentation": {
-        "reveal": "silent",
-        "panel": "shared",
-        "clear": true
-      },
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Server"
-      },
-      "group": "build"
-    },
-    {
       "label": "Shared: Clean & Build",
       "type": "shell",
       "command": "dotnet clean && dotnet build",
@@ -94,7 +34,7 @@
       "group": "build"
     },
     {
-      "label": "start tailwind jit/watch",
+      "label": "start tailwind jit/watch - client",
       "type": "npm",
       "script": "watch-client",
       // "problemMatcher": [],
@@ -107,7 +47,36 @@
       }
     },
     {
-      "label": "stop tailwind jit/watch",
+      "label": "start tailwind jit/watch - server",
+      "type": "npm",
+      "script": "watch-server",
+      // "problemMatcher": [],
+      "isBackground": true,
+      "presentation": {
+        "echo": false,
+        "reveal": "never",
+        "panel": "shared",
+        "clear": true
+      }
+    },
+    {
+      "label": "delay",
+      "type": "shell",
+      "command": "sleep 2",
+      "presentation": {
+        "echo": false,
+        "reveal": "never",
+        "panel": "shared"
+      }
+    },
+    {
+      "label": "stop tailwind jit/watch - client",
+      "command": "echo ${input:terminate}",
+      "type": "shell",
+      "problemMatcher": []
+    },
+    {
+      "label": "stop tailwind jit/watch - server",
       "command": "echo ${input:terminate}",
       "type": "shell",
       "problemMatcher": []
@@ -115,10 +84,16 @@
   ],
   "inputs": [
     {
-      "id": "terminate",
+      "id": "terminate-client",
       "type": "command",
       "command": "workbench.action.tasks.terminate",
-      "args": "start tailwind jit/watch"
+      "args": "start tailwind jit/watch - client"
+    },
+    {
+      "id": "terminate-server",
+      "type": "command",
+      "command": "workbench.action.tasks.terminate",
+      "args": "start tailwind jit/watch - client"
     }
   ]
 }
