Redo structure of CSS (bundled version)- fixes #32

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
-   "azureFunctions.deploySubpath": "API/bin/Release/netcoreapp3.1/publish",
-   "azureFunctions.projectLanguage": "C#",
-   "azureFunctions.projectRuntime": "~3",
-   "debug.internalConsoleOptions": "neverOpen",
-   "azureFunctions.preDeployTask": "publish",
-   "[csharp]": {
-      // "editor.codeLensFontSize": 9,
-      "editor.formatOnType": true,
-      "editor.formatOnPaste": true,
-      "editor.formatOnSave": true,
-      "editor.autoIndent": "advanced",
-      "editor.wordBasedSuggestions": false,
-      "editor.semanticHighlighting.enabled": true,
-   },
-   "omnisharp.enableEditorConfigSupport": true,
-   "omnisharp.enableImportCompletion": true,
-   "omnisharp.enableRoslynAnalyzers": true,
-   "csharp.semanticHighlighting.enabled": true,
-   "csharp.suppressHiddenDiagnostics": false,
+  "azureFunctions.deploySubpath": "API/bin/Release/netcoreapp3.1/publish",
+  "azureFunctions.projectLanguage": "C#",
+  "azureFunctions.projectRuntime": "~3",
+  "debug.internalConsoleOptions": "neverOpen",
+  "azureFunctions.preDeployTask": "publish",
+  "[csharp]": {
+    // "editor.codeLensFontSize": 9,
+    "editor.formatOnType": true,
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.autoIndent": "advanced",
+    "editor.wordBasedSuggestions": false,
+    "editor.semanticHighlighting.enabled": true,
+  },
+  "omnisharp.enableEditorConfigSupport": true,
+  "omnisharp.enableImportCompletion": true,
+  "omnisharp.enableRoslynAnalyzers": true,
+  "csharp.semanticHighlighting.enabled": true,
+  "csharp.suppressHiddenDiagnostics": false
 }
