--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -25,7 +25,7 @@
         <Exec Command="npm install" />
     </Target>
     <Target Name="tailwind build" AfterTargets="Build">
-        <Exec Command="npm run build-client" Condition="'$(Configuration)' == 'Debug'"/>
-        <Exec Command="npm run publish-client" Condition="'$(Configuration)' == 'Release'"/>
+        <Exec Command="npm run build" Condition="'$(Configuration)' == 'Debug'"/>
+        <!-- <Exec Command="npm run publish" Condition="'$(Configuration)' == 'Release'"/> -->
     </Target>
 </Project>
