--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "tailblazor",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "template for using tailwind css in jit mode with blazor projects",
   "devDependencies": {
     "postcss-import": "^14.0.1",
     "tailwindcss": "^2.2.2"
   },
   "scripts": {
-    "build": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Shared/wwwroot/Shared.css",
-    "watch": "npx tailwindcss --watch --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Shared/wwwroot/Shared.css",
-    "publish": "npx tailwindcss --minify --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Shared/wwwroot/Shared.css"
+    "build-client": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Client/wwwroot/site.min.css",
+    "watch-client": "npx tailwindcss --watch --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Client/wwwroot/site.min.css",
+    "publish-client": "npx tailwindcss --minify --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Client/wwwroot/site.min.css",
+    "build-server": "npx tailwindcss --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Server/wwwroot/site.min.css",
+    "watch-server": "npx tailwindcss --watch --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Server/wwwroot/site.min.css",
+    "publish-server": "npx tailwindcss --minify --config tailwind.config.js --postcss postcss.config.js -i site.css -o ./Server/wwwroot/site.min.css"
   },
   "keywords": [
     "tailwindcss",
