--- a/RazorClassLibrary/RazorClassLibrary.csproj
+++ b/RazorClassLibrary/RazorClassLibrary.csproj
@@ -13,7 +13,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.0-preview.5.*" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Core\Core.csproj" />
+        <ProjectReference Include="..\SharedClassLibrary\SharedClassLibrary.csproj" />
     </ItemGroup>
     <Target Name="npm check" BeforeTargets="npm install">
         <Exec Command="npm -v" ContinueOnError="true">
